Fix z-index for main nag in mobile devices.
git-svn-id: https://svn.library.cornell.edu/warburg/trunk@474 7fd527ee-9837-423d-921d-0a34619f9d71

--- a/css/panels/_base.scss
+++ b/css/panels/_base.scss
@@ -1010,6 +1010,7 @@ body {
 				#nav:target > ul
 				{
 					display: block;
+					z-index: 4;
 				}
 				#nav > ul > li
 				{
@@ -1036,6 +1037,7 @@ body {
 					position: static;
 					padding: 1.25em; /* 20 */
 					padding-top: 0;
+					z-index: 4;
 				}
 			}
 		}
